force-app/main/default/objects/Visits__c/Visits__c.object-meta.xml
<CustomObject>
    <description>This object is used to track every single visit or encounter for a patient.</description>
    <label>Care Episode</label>
    <nameField>
        <label>Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>