force-app/main/default/objects/Visits__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents the relationship b/w Patient and Care Episode.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Care Episodes</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>