force-app/main/default/objects/Visits__c/fields/Admission_Type__c.field-meta.xml
<CustomField>
    <fullName>Admission_Type__c</fullName>
    <description>It denotes the admission type of the patient. E-Emergency, A-Accident</description>
    <label>Admission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E</fullName>
                <label>Emergency</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Accident</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>