force-app/main/default/objects/Visits__c/fields/Admit_Date__c.field-meta.xml
<CustomField>
    <fullName>Admit_Date__c</fullName>
    <description>It denotes the admit date of the patient.</description>
    <label>Admit Date</label>
    <type>Date</type>
</CustomField>