force-app/main/default/objects/Visits__c/fields/Admitting_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Admitting_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Full responsibility for the patient&apos;s admission to discharge</description>
    <label>Admitting Doctor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practitioner</value>
        </filterItems>
        <filterItems>
            <field>Contact.Elixir_Contact_Type__c</field>
            <operation>equals</operation>
            <value>Elixir_Practitioner_Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visits (Admitting Doctor)</relationshipLabel>
    <relationshipName>Visits3</relationshipName>
    <type>Lookup</type>
</CustomField>