force-app/main/default/objects/Visits__c/fields/Ambulatory_status__c.field-meta.xml
<CustomField>
    <fullName>Ambulatory_status__c</fullName>
    <description>If patient was able to walk, on wheel-chair etc when patient visited</description>
    <label>Ambulatory status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A0</fullName>
                <label>No functional limitations</label>
            </value>
            <value>
                <fullName>A1</fullName>
                <label>Ambulates with assistive device</label>
            </value>
            <value>
                <fullName>A2</fullName>
                <label>Wheelchair/stretcher bound</label>
            </value>
            <value>
                <fullName>A3</fullName>
                <label>Comatose; non-responsive</label>
            </value>
            <value>
                <fullName>A4</fullName>
                <label>Disoriented</label>
            </value>
            <value>
                <fullName>A5</fullName>
                <label>Vision impaired</label>
            </value>
            <value>
                <fullName>A6</fullName>
                <label>Hearing impaired</label>
            </value>
            <value>
                <fullName>A7</fullName>
                <label>Speech impaired</label>
            </value>
            <value>
                <fullName>A8</fullName>
                <label>Non-English speaking</label>
            </value>
            <value>
                <fullName>A9</fullName>
                <label>Functional level unknown</label>
            </value>
            <value>
                <fullName>B1</fullName>
                <label>Oxygen therapy</label>
            </value>
            <value>
                <fullName>B2</fullName>
                <label>Special equipment (tubes, IVs, catheters)</label>
            </value>
            <value>
                <fullName>B3</fullName>
                <label>Amputee</label>
            </value>
            <value>
                <fullName>B4</fullName>
                <label>Mastectomy</label>
            </value>
            <value>
                <fullName>B5</fullName>
                <label>Paraplegic</label>
            </value>
            <value>
                <fullName>B6</fullName>
                <label>Pregnant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>