force-app/main/default/objects/Visits__c/fields/Attending_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Attending_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary / attending physician who is responsible for taking care</description>
    <label>Attending Doctor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practitioner</value>
        </filterItems>
        <filterItems>
            <field>Contact.Elixir_Contact_Type__c</field>
            <operation>equals</operation>
            <value>Elixir_Practitioner_Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>