force-app/main/default/objects/Visits__c/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents physical space where a significant portion of a patient&apos;s care episode takes place.</description>
    <label>Bed ID</label>
    <referenceTo>Bed__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>