force-app/main/default/objects/Visits__c/fields/Bed_Number__c.field-meta.xml
<CustomField>
    <fullName>Bed_Number__c</fullName>
    <description>It denotes the bed number for the care episode.</description>
    <formula>Bed__r.Bed_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bed</label>
    <type>Text</type>
</CustomField>