force-app/main/default/objects/Visits__c/fields/Billing_Provider__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It denotes the billing provider for the care episode.</description>
    <label>Billing Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Provider__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Template Provider</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Visits (Billing Provider)</relationshipLabel>
    <relationshipName>Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>