force-app/main/default/objects/Visits__c/fields/Care_Episode_Location__c.field-meta.xml
<CustomField>
    <fullName>Care_Episode_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes where healthcare services are delivered.</description>
    <label>Care Episode Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Provider__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Template_Provider</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>