force-app/main/default/objects/Visits__c/fields/Charge_Price_indicator__c.field-meta.xml
<CustomField>
    <fullName>Charge_Price_indicator__c</fullName>
    <description>If hospital should ask for actual costs or discounted costs based on the financial situation</description>
    <label>Charge / Price indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Actual</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Estimate</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Discounted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>