force-app/main/default/objects/Visits__c/fields/Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Date__c</fullName>
    <description>It denotes the discharge date of the patient for the care episode.</description>
    <label>Discharge Date</label>
    <type>DateTime</type>
</CustomField>