force-app/main/default/objects/Visits__c/fields/Financial_Class__c.field-meta.xml
<CustomField>
    <fullName>Financial_Class__c</fullName>
    <description>We have in Lab order, and this determines socio-economic status.  And the care episode cost can also be processed accordingly</description>
    <label>Financial Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Self-pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>