force-app/main/default/objects/Visits__c/fields/Hospitalization_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hospitalization_End_Date__c</fullName>
    <description>The field denotes the hospitalization end date for the patient in the care episode.</description>
    <label>Hospitalization End Date</label>
    <type>Date</type>
</CustomField>