force-app/main/default/objects/Visits__c/fields/Hospitalization_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Hospitalization_Start_Date__c</fullName>
    <description>The field denotes the hospitalization start date for the patient in the care episode.</description>
    <label>Hospitalization Start Date</label>
    <type>Date</type>
</CustomField>