force-app/main/default/objects/Visits__c/fields/House__c.field-meta.xml
<CustomField>
    <fullName>House__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field denotes the house for the patient in the care episode.</description>
    <label>House ID</label>
    <referenceTo>House__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>