force-app/main/default/objects/Visits__c/fields/Level_Of_Care__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Care__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field denotes the level of care for the patient.</description>
    <label>Level Of Care ID</label>
    <referenceTo>Programs__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>