force-app/main/default/objects/Visits__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The field denotes the location for the care episode.</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>