force-app/main/default/objects/Visits__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <description>The field denotes the next review date for the patient.</description>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>