force-app/main/default/objects/Visits__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field denotes an opportunity for the care episode.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Care Episode</relationshipLabel>
    <relationshipName>CareEpisode</relationshipName>
    <type>Lookup</type>
</CustomField>