force-app/main/default/objects/Visits__c/fields/Parent_Care_Episode__c.field-meta.xml
<CustomField>
    <fullName>Parent_Care_Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link Patient specific care episode as parent care episode.</description>
    <label>Parent Care Episode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Visits__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>