force-app/main/default/objects/Visits__c/fields/Patient_class__c.field-meta.xml
<CustomField>
    <fullName>Patient_class__c</fullName>
    <description>Inpatient, Outpatient, Unknown (I, O, U as codes)</description>
    <label>Patient class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <label>In Patient</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Out Patient</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>