force-app/main/default/objects/Visits__c/fields/Patient_type__c.field-meta.xml
<CustomField>
    <fullName>Patient_type__c</fullName>
    <description>when Patient type data is passed to the Federal, the incentives come on time</description>
    <label>Patient type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>