force-app/main/default/objects/Visits__c/fields/Pre_Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>Pre_Authorization_Number__c</fullName>
    <description>This field will store the preauthorization number for the care episode.</description>
    <label>Pre Authorization Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>