force-app/main/default/objects/Visits__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>This field denotes the reason for the care episode.</description>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>