force-app/main/default/objects/Visits__c/fields/Rendering_Provider__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to practitioner contacts, helps in creating reports.</description>
    <label>Rendering Provider</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Practitioner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visits (Rendering Provider)</relationshipLabel>
    <relationshipName>Visits4</relationshipName>
    <type>Lookup</type>
</CustomField>