force-app/main/default/objects/Visits__c/fields/Requires_Financial_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Requires_Financial_Assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field denotes whether the patient requires any financial assistance or not.</description>
    <label>Requires Financial Assistance</label>
    <type>Checkbox</type>
</CustomField>