force-app/main/default/objects/Visits__c/fields/Rooms__c.field-meta.xml
<CustomField>
    <fullName>Rooms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the room lookup for a care episode.</description>
    <label>Room ID</label>
    <referenceTo>Rooms__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>