force-app/main/default/objects/Visits__c/fields/Treatment_Center__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will store the treatment center lookup.</description>
    <label>Treatment Center ID</label>
    <referenceTo>Treatment_Center__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>