force-app/main/default/objects/Visits__c/fields/VIP_Indicator__c.field-meta.xml
<CustomField>
    <fullName>VIP_Indicator__c</fullName>
    <description>This field denotes whether the patient is VIP or not.</description>
    <label>VIP Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>