force-app/main/default/objects/Visits__c/fields/Visit_End__c.field-meta.xml
<CustomField>
    <fullName>Visit_End__c</fullName>
    <description>The Start time of the visit.</description>
    <label>Period End</label>
    <type>DateTime</type>
</CustomField>