force-app/main/default/objects/Visits__c/fields/Visit_Start__c.field-meta.xml
<CustomField>
    <fullName>Visit_Start__c</fullName>
    <description>The Start time of the visit.</description>
    <label>Period Start</label>
    <type>DateTime</type>
</CustomField>