force-app/main/default/objects/Visits__c/validationRules/Start_Date_Must_Be_Before_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Must_Be_Before_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Visit_Start__c   &gt;   Visit_End__c</errorConditionFormula>
    <errorMessage>Period Start Date cannot be greater than Period End Date.</errorMessage>
</ValidationRule>